fix: add vertical gap between items on mobile

--- a/resources/less/forum/VotesBox.less
+++ b/resources/less/forum/VotesBox.less
@@ -77,6 +77,7 @@
       display: flex;
       flex-wrap: wrap;
       gap: unset;
+      margin-top: -4px;
     }
   }
 
@@ -89,6 +90,7 @@
 
     @media @phone {
       margin-left: 4px;
+      margin-top: 4px;
     }
 
     .Avatar {
